--- a/inicio.html
+++ b/inicio.html
@@ -32,11 +32,8 @@
             </div>
         </div>
         <div id="footer">
-            <hr>
-            <center>
-                <b> © 2021 | TEAM 3 - GRUPO 05 - DESARROLLO DE SOFTWARE | MISIÓNTIC 2022</b> <br>
-                <b>TODOS LOS DERECHOS RESERVADOS</b>
-            </center>
+            <span> © 2021 | TEAM 3 - GRUPO 05 - DESARROLLO DE SOFTWARE | MISIÓNTIC 2022</span><br>
+            <span>TODOS LOS DERECHOS RESERVADOS</span>
         </div>
     </div>
 </body>
